--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <!--Top Bar-->
-  {% include 'partials/_topbar.html' %}
+  <!--% include 'partials/_topbar.html' %}-->
   <!--Nav Bar-->
   {% include 'partials/_navbar.html' %}
   {% block content %}{% endblock %} 
