--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -1,5 +1,37 @@
+
  <!-- Footer -->
  <footer id="main-footer" class="py-4 bg-primary text-white text-center">
+  <section id="top-bar" class="p-3">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <i class="fas fa-phone"></i> (469)-516-8789
+        </div>
+        <div class="col-md-4">
+          <i class="fas fa-envelope-open"></i> contact@abdrealestate.co
+        </div>
+        <div class="col-md-4">
+          <div class="social text-right">
+            <a href="#">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a href="#">
+              <i class="fab fa-facebook"></i>
+            </a>
+            <a href="#">
+              <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="#">
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a href="#">
+              <i class="fab fa-pinterest"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
     Copyright &copy;
     <span class="year"></span> ABD Real Estate
   </footer>
