--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -6,8 +6,8 @@
     <div class="container">
       <div class="row text-center">
         <div class="col-md-12">
-          <h1 class="display-4">About BT Real Estate</h1>
-          <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt, pariatur!</p>
+          <h1 class="display-4">About ABD Real Estate</h1>
+          <p class="lead">ABD is a real estate and rental marketplace committed to serve customers.</p>
         </div>
       </div>
     </div>
@@ -33,11 +33,9 @@
       <div class="row">
         <div class="col-md-8">
           <h2>We Search For The Perfect Home</h2>
-          <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt, pariatur!</p>
+          <p class="lead"></p>
           <img src="{% static 'img/about.jpg' %}" alt="">
-          <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis esse officia repudiandae ad saepe ex, amet
-            neque quod accusamus rem quia magnam magni dolorum facilis ullam minima perferendis? Exercitationem at quaerat
-            commodi id libero eveniet harum perferendis laborum molestias quia.</p>
+          <p class="mt-4">ABD is the leading real estate and rental marketplace committed to empowering consumers around the place they call home with data, inspiration and expertise, and connecting them to the best local professionals who can help. ABD covers the entire lifecycle of home ownership and living: purchasing, selling, renting, financing, remodeling and more.</p>
         </div>
         <div class="col-md-4">
           {% if mvprealtors %}
@@ -61,9 +59,9 @@
   <!-- Work -->
   <section id="work" class="bg-dark text-white text-center">
     <h2 class="display-4">We Work For You</h2>
-    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem velit aperiam, unde aliquid at similique!</h4>
+    <h4>ABD runs round the clock to help people provide better lifestyle and luxurious homes. Believe in US!</h4>
     <hr>
-    <a href="listings.html" class="btn btn-secondary text-white btn-lg">View Our Featured Listings</a>
+    <a href="/listings" class="btn btn-secondary text-white btn-lg">View Our Featured Listings</a>
   </section>
 
   <!-- Team -->
@@ -74,7 +72,7 @@
         {% if realtors %}
           {% for realtor in realtors %}
             <div class="col-md-4">
-              <img src="{{realtor.photo.url}}" alt="" class="rounded-circle mb-3">
+              <img src="{{realtor.photo.url}}" height="300" width="30" alt="" class="rounded-circle mb-3">
               <h4>{{realtor.name}}</h4>
               <p class="text-success">
                 <i class="fas fa-award text-success mb-3"></i> Realtor</p>
@@ -82,7 +80,7 @@
               <p>
                 <i class="fas fa-phone"></i>{{realtor.phone}}</p>
               <p>
-                <i class="fas fa-envelope-open"></i>{{realtor.email}}</p>
+                <i class="fas fa-envelope-open"></i>  {{realtor.email}}</p>
             </div>
           {% endfor %}
         {%else %}
