--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -3,7 +3,7 @@
 {% block branding %}
     <h1 id ="head">
         <img src="{% static 'img/logo.png' %}" alt="ABD Real Estate" height="50" width="80"
-        class="brand_img"> Admin Area
+        class="brand_img"> Admin Hub
     </h1>
 {% endblock %}
 {% block extrastyle %}
