--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -7,7 +7,7 @@
       <div class="row text-center">
         <div class="col-md-12">
           <h1 class="display-4">Browse Our Properties</h1>
-          <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt, pariatur!</p>
+          <p class="lead">We help you browse your perfect homes for your livelihood.</p>
         </div>
       </div>
     </div>
@@ -36,7 +36,7 @@
           {% for listing in listings %}
             <div class="col-md-6 col-lg-4 mb-4">
               <div class="card listing-preview">
-                <img class="card-img-top" src="{{ listing.photo_main.url}}" alt="">
+                <img class="card-img-top" height="250" width="388" src="{{ listing.photo_main.url}}" alt="">
                 <div class="card-img-overlay">
                   <h2>
                     <span class="badge badge-secondary text-white">${{ listing.price | intcomma}}</span>
